// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleSearchComponent should have a proper style generator 1`] = `
Object {
  "inHeader": Object {
    "& input[type=\\"search\\"]::-webkit-search-cancel-button": Object {
      "display": "none",
    },
    "backgroundColor": "test2",
  },
  "mobileBackArrow": Object {
    "fill": "test1",
    "height": 50,
    "opacity": 0.5,
    "width": 50,
  },
  "mobileBackArrowButton": Object {
    "height": 70,
    "width": 70,
  },
  "mobileHeader": Object {
    "backgroundColor": "test2",
    "height": 70,
    "left": 0,
    "position": "absolute",
    "top": 0,
    "width": "100%",
    "zIndex": 100,
  },
  "mobileSearchInput": Object {
    "& input": Object {
      "fontSize": 32,
      "fontWeight": "test3",
      "lineHeight": 1.2,
      "marginTop": 10,
      "overflow": "hidden",
      "textOverflow": "ellipsis",
    },
    "height": 70,
    "width": "99%",
  },
  "searchIconMobile": Object {
    "fill": "test2",
  },
  "searchIconPrefix": Object {
    "fill": "test1",
    "opacity": 0.66,
  },
}
`;

exports[`SimpleSearchComponent should render default view 1`] = `
<Fragment>
  <form
    onSubmit={[Function]}
    style={
      Object {
        "margin": 8,
      }
    }
  >
    <WithStyles(Grid)
      alignItems="center"
      container={true}
      spacing={16}
    >
      <WithStyles(Grid)
        item={true}
        xs={true}
      >
        <TextField
          error={null}
          fullWidth={true}
          id="simpleSearchField"
          inputProps={
            Object {
              "aria-label": "Enter your search query to search eSpace and then press Enter",
            }
          }
          label="Search eSpace"
          onChange={[Function]}
          onKeyPress={[Function]}
          placeholder="Enter your search query to search all fields in eSpace"
          required={false}
          select={false}
          type="search"
          value=""
          variant="standard"
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to search eSpace"
          color="primary"
          disabled={false}
          fullWidth={true}
          id="simpleSearchButton"
          onClick={[Function]}
          variant="contained"
        >
          Search
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to switch to Advanced search"
          className="advancedButton"
          fullWidth={true}
          id="showAdvancedSearchButton"
          onClick={[Function]}
          variant="contained"
        >
          Advanced search
        </WithStyles(Button)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </form>
</Fragment>
`;

exports[`SimpleSearchComponent should render mobile view 1`] = `
<Hidden
  implementation="js"
  lgDown={false}
  lgUp={false}
  mdDown={false}
  mdUp={false}
  smDown={false}
  smUp={true}
  xlDown={false}
  xlUp={false}
  xsDown={false}
  xsUp={false}
>
  <WithStyles(Grid)
    item={true}
  >
    <WithStyles(Button)
      onClick={[Function]}
    >
      <pure(ArrowBackIcon) />
    </WithStyles(Button)>
  </WithStyles(Grid)>
</Hidden>
`;

exports[`SimpleSearchComponent should render show prefix icon in the search box 1`] = `
<Fragment>
  <form
    onSubmit={[Function]}
    style={
      Object {
        "margin": 8,
      }
    }
  >
    <WithStyles(Grid)
      alignItems="center"
      container={true}
      spacing={16}
    >
      <WithStyles(Grid)
        item={true}
        xs={true}
      >
        <TextField
          error={null}
          fullWidth={true}
          id="simpleSearchField"
          inputProps={
            Object {
              "aria-label": "Enter your search query to search eSpace and then press Enter",
            }
          }
          label="Search eSpace"
          onChange={[Function]}
          onKeyPress={[Function]}
          placeholder="Enter your search query to search all fields in eSpace"
          required={false}
          select={false}
          type="search"
          value=""
          variant="standard"
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to search eSpace"
          color="primary"
          disabled={false}
          fullWidth={true}
          id="simpleSearchButton"
          onClick={[Function]}
          variant="contained"
        >
          Search
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to switch to Advanced search"
          className="advancedButton"
          fullWidth={true}
          id="showAdvancedSearchButton"
          onClick={[Function]}
          variant="contained"
        >
          Advanced search
        </WithStyles(Button)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </form>
</Fragment>
`;

exports[`SimpleSearchComponent should render with a class "header" for use in AppBar 1`] = `
<Fragment>
  <form
    onSubmit={[Function]}
    style={
      Object {
        "margin": 8,
      }
    }
  >
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(Grid)
        alignItems="center"
        className={Object {}}
        container={true}
        direction="row"
        spacing={8}
        wrap="nowrap"
      >
        <WithStyles(Grid)
          item={true}
          xs={true}
        >
          <TextField
            InputProps={
              Object {
                "disableUnderline": true,
              }
            }
            autoComplete="search"
            error={null}
            fullWidth={true}
            id="simpleSearchField"
            inputProps={
              Object {
                "aria-label": "Enter your search query to search eSpace and then press Enter",
              }
            }
            label={false}
            onChange={[Function]}
            onKeyPress={[Function]}
            placeholder="Search eSpace"
            required={false}
            select={false}
            type="search"
            value=""
            variant="standard"
          />
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </Hidden>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={true}
      xlDown={false}
      xlUp={false}
      xsDown={false}
      xsUp={false}
    >
      <WithStyles(Tooltip)
        TransitionComponent={[Function]}
        TransitionProps={
          Object {
            "timeout": 300,
          }
        }
        placement="bottom-end"
        title="Search eSpace"
      >
        <WithStyles(IconButton)
          aria-label="Click to search eSpace"
          onClick={[Function]}
        >
          <pure(SearchIcon) />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
    </Hidden>
  </form>
</Fragment>
`;

exports[`SimpleSearchComponent should set search value from prop 1`] = `
<Fragment>
  <form
    onSubmit={[Function]}
    style={
      Object {
        "margin": 8,
      }
    }
  >
    <WithStyles(Grid)
      alignItems="center"
      container={true}
      spacing={16}
    >
      <WithStyles(Grid)
        item={true}
        xs={true}
      >
        <TextField
          error={null}
          fullWidth={true}
          id="simpleSearchField"
          inputProps={
            Object {
              "aria-label": "Enter your search query to search eSpace and then press Enter",
            }
          }
          label="Search eSpace"
          onChange={[Function]}
          onKeyPress={[Function]}
          placeholder="Enter your search query to search all fields in eSpace"
          required={false}
          select={false}
          type="search"
          value="i feel lucky"
          variant="standard"
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to search eSpace"
          color="primary"
          disabled={false}
          fullWidth={true}
          id="simpleSearchButton"
          onClick={[Function]}
          variant="contained"
        >
          Search
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to switch to Advanced search"
          className="advancedButton"
          fullWidth={true}
          id="showAdvancedSearchButton"
          onClick={[Function]}
          variant="contained"
        >
          Advanced search
        </WithStyles(Button)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </form>
</Fragment>
`;

exports[`SimpleSearchComponent should show prefix icon when in header 1`] = `
<WithStyles(Grid)
  item={true}
  xs="auto"
>
  <pure(SearchIcon)
    className="searchIconPrefix"
  />
</WithStyles(Grid)>
`;
